Working Historical Graph and Socket

--- a/realTime.html
+++ b/realTime.html
@@ -5,19 +5,21 @@
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; background-color: #f8f8f8;}
-      canvas {margin-left: 300px; margin-top: 50px;}
+      #mycanvas {margin-left: 300px; margin-top: 50px;}
       h1 {margin-top:50px; margin-left:500px;}
       #sensor_group {margin-left: 450px; margin-top: -400px;}
       #one{color:rgb(0 , 255 , 0);}
-      #button {margin-top:500px; margin-left:500px;width:200px; height:75px;color:blue;font-size:15px;}
+      #button {margin-top:500px; margin-left:500px;margin-bottom:100px;width:200px; height:75px;color:blue;font-size:15px;}
+      #graphdiv{margin-left: 50px;width:1000px; height:400px ;}
       hr {width:700px; margin-top:100px; margin-left:300px;}
       footer {font-family: Arial; margin-left:500px;margin-top:20px;margin-bottom:100px;}
       #value_group {margin-left:625px; margin-top: -317px;}
     </style>
     <script src= "https://cdnjs.cloudflare.com/ajax/libs/smoothie/1.27.0/smoothie.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/public/smoothie.js"></script>
-    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dygraph/1.1.1/dygraph-combined-dev.js"></script>
+    <!-- <script src="/public/smoothie.js"></script> -->
+    <!-- <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script> -->
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
   </head>
   <body>
@@ -36,9 +38,10 @@
         <h1 id = "val_four"> </h1>
   </div>
   <button id = "button" type="button">Draw Historical Graph</button>
-  <div id = "historyBox">
 
-  <canvas id="history" width="600" height="500"></canvas>
+
+  <div id="dy">
+  <div id="graphdiv"></div>
   </div>
 
    <hr>
@@ -58,6 +61,7 @@
         labels: { fillStyle:'rgb(255, 255, 255)' },
         sharpLines:true,
         labels:{fontSize:15},
+        horizontalLines:{color:'#ffff6f',lineWidth:1,value:0},
         timestampFormatter:SmoothieChart.timeFormatter
         });
 
@@ -77,7 +81,7 @@
         smoothie.streamTo(document.getElementById("mycanvas"), 0 /*delay*/);
 
 
-        var socket = io.connect();
+
 
 
         socket.on("A", function(data) {
@@ -101,67 +105,38 @@
         });
  //-------------Historical Graph ---------------------------------------------//
 
- // var socket = io.connect();
- //
- // $( "#button" ).click(function() {
- //  //  alert( "Handler for .click() called." );
- //  var string = "I Work"
- //   socket.emit("buttonPress",string);
- // });
- //
- //
-
-
-
- var smoothie = new SmoothieChart( {
- grid: { strokeStyle:'rgb(125, 0, 0)', fillStyle:'rgb(60, 0, 0)',
- lineWidth: 1, millisPerLine: 2000, verticalSections: 6, },
- minValue:-10,
- maxValue:50,
- interpolation:"step",
- labels: { fillStyle:'rgb(255, 255, 255)' },
- sharpLines:true,
- labels:{fontSize:15},
- timestampFormatter:SmoothieChart.timeFormatter // Check
+ $( "#button" ).click(function() {
+  //  alert( "Handler for .click() called." );
+  var string = "Historical Data"
+   socket.emit("buttonPress",string);
  });
 
+socket.on("A1", function(newString) {
 
- var lineA = new TimeSeries();
- var lineB = new TimeSeries();
- var lineC = new TimeSeries();
- var lineD = new TimeSeries();
+var g = new Dygraph(document.getElementById("graphdiv"),
+[
 
- smoothie.addTimeSeries(lineA, { strokeStyle:'rgb(0 , 255 , 0)', fillStyle:'rgba(0, 255, 0, 0.1)', lineWidth:3 });
- smoothie.addTimeSeries(lineB, { strokeStyle:'rgb(0 ,0 , 255)', fillStyle:'rgba(0, 0, 255, 0.1)', lineWidth:3 });
- smoothie.addTimeSeries(lineC, { strokeStyle:'rgb(0 ,100 , 150)', fillStyle:'rgba(0, 0, 255, 0.1)', lineWidth:3 });
- smoothie.addTimeSeries(lineD, { strokeStyle:'rgb(0 ,0 , 0)', fillStyle:'rgba(0, 0, 255, 0.1)', lineWidth:3 });
+  // Here you need to input an arrays in this format or csv.
+  //CSV are preferable.
+    [1,10,100],
+    [2,20,20],
+    [3,50,60],
+    [4,70,80]
+],
+{
+    labels: [ "Time", "Sensor-A", "Sensor-B" ]
 
+  });
 
+  console.log(newString);
+  var dataArray = newString.split(',');
+  // var max = dataArray.length()
+  for(var i = 0; i < 3 ; i++){
+    console.log(dataArray[i]);
+  lineA1.append(new Date(endTime - i*500).getTime(),dataArray[i]);
 
- smoothie.streamTo(document.getElementById("history"), 1000 /*delay*/);
-
-
- var socket = io.connect();
-
-
- socket.on("A", function(data) {
- lineA.append(new Date().getTime(),data);
+};
 });
-
- socket.on("B", function(data) {
- lineB.append(new Date().getTime(),data);
- });
-
- socket.on("C", function(data) {
- lineC.append(new Date().getTime(),data);
- });
-
- socket.on("D", function(data) {
- lineD.append(new Date().getTime(),data);
- });
-
-
-
 
     </script>
   </body>
