--- a/realTime.html
+++ b/realTime.html
@@ -1,143 +1,257 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Socket.IO chat</title>
-    <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; background-color: #f8f8f8;}
-      #mycanvas {margin-left: 300px; margin-top: 50px;}
-      h1 {margin-top:50px; margin-left:500px;}
-      #sensor_group {margin-left: 450px; margin-top: -400px;}
-      #one{color:rgb(0 , 255 , 0);}
-      #button {margin-top:500px; margin-left:500px;margin-bottom:100px;width:200px; height:75px;color:blue;font-size:15px;}
-      #graphdiv{margin-left: 50px;width:1000px; height:400px ;}
-      hr {width:700px; margin-top:100px; margin-left:300px;}
-      footer {font-family: Arial; margin-left:500px;margin-top:20px;margin-bottom:100px;}
-      #value_group {margin-left:625px; margin-top: -317px;}
-    </style>
-    <script src= "https://cdnjs.cloudflare.com/ajax/libs/smoothie/1.27.0/smoothie.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dygraph/1.1.1/dygraph-combined-dev.js"></script>
-    <!-- <script src="/public/smoothie.js"></script> -->
-    <!-- <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script> -->
-    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-  </head>
-  <body>
-    <h1>Real Time Temp Analysis</h1>
-    <canvas id="mycanvas" width="600" height="500"></canvas>
-    <div id="sensor_group">
-         <h1 id = "one">sensor A = </h1>
-         <h1 id = "two">sensor B = </h1>
-         <h1 id = "three">sensor C = </h1>
-         <h1 id = "four">sensor D = </h1>
-   </div>
-   <div id="value_group">
-        <h1 id = "val_one"> </h1>
-        <h1 id = "val_two"> </h1>
-        <h1 id = "val_three"> </h1>
-        <h1 id = "val_four"> </h1>
+
+<head>
+  <title>Socket.IO chat</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font: 13px Helvetica, Arial;
+      background-color: #f8f8f8;
+    }
+
+    #mycanvas {
+      margin-left: 300px;
+      margin-top: 50px;
+    }
+
+    h1 {
+      margin-top: 50px;
+      margin-left: 500px;
+    }
+
+    #sensor_group {
+      margin-left: 450px;
+      margin-top: -400px;
+    }
+
+    #one {
+      color: rgb(0, 255, 0);
+    }
+
+    #button {
+      margin-top: 500px;
+      margin-left: 500px;
+      margin-bottom: 100px;
+      width: 200px;
+      height: 75px;
+      color: blue;
+      font-size: 15px;
+    }
+
+    #graphdiv {
+      margin-left: 50px;
+      width: 1000px;
+      height: 400px;
+    }
+
+    hr {
+      width: 700px;
+      margin-top: 100px;
+      margin-left: 300px;
+    }
+
+    footer {
+      font-family: Arial;
+      margin-left: 500px;
+      margin-top: 20px;
+      margin-bottom: 100px;
+    }
+
+    #value_group {
+      margin-left: 625px;
+      margin-top: -317px;
+    }
+  </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothie/1.27.0/smoothie.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dygraph/1.1.1/dygraph-combined-dev.js"></script>
+  <!-- <script src="/public/smoothie.js"></script> -->
+  <!-- <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script> -->
+  <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+</head>
+
+<body>
+  <h1>Real Time Temp Analysis</h1>
+  <canvas id="mycanvas" width="600" height="500"></canvas>
+  <div id="sensor_group">
+    <h1 id="one">sensor A = </h1>
+    <h1 id="two">sensor B = </h1>
+    <h1 id="three">sensor C = </h1>
+    <h1 id="four">sensor D = </h1>
   </div>
-  <button id = "button" type="button">Draw Historical Graph</button>
+  <div id="value_group">
+    <h1 id="val_one"> </h1>
+    <h1 id="val_two"> </h1>
+    <h1 id="val_three"> </h1>
+    <h1 id="val_four"> </h1>
+  </div>
+  <button id="button" type="button">Draw Historical Graph</button>
 
 
   <div id="dy">
-  <div id="graphdiv"></div>
+    <div id="graphdiv"></div>
   </div>
 
-   <hr>
-   <footer>
-        <h4>Running on node.js | socket.io | Express.js | Mongodb</h4>
-   </footer>
+  <hr>
+  <footer>
+    <h4>Running on node.js | socket.io | Express.js | Mongodb</h4>
+  </footer>
   <script>
-        var socket = io();
+    var socket = io();
 
- //----------------------Real Time Graph ----------------------------------//
-        var smoothie = new SmoothieChart( {
-        grid: { strokeStyle:'rgb(125, 0, 0)', fillStyle:'rgb(60, 0, 0)',
-        lineWidth: 1, millisPerLine: 2000, verticalSections: 6, },
-        minValue:-10,
-        maxValue:50,
-        interpolation:"step",
-        labels: { fillStyle:'rgb(255, 255, 255)' },
-        sharpLines:true,
-        labels:{fontSize:15},
-        horizontalLines:{color:'#ffff6f',lineWidth:1,value:0},
-        timestampFormatter:SmoothieChart.timeFormatter
-        });
-
-
-        var lineA = new TimeSeries();
-        var lineB = new TimeSeries();
-        var lineC = new TimeSeries();
-        var lineD = new TimeSeries();
-
-        smoothie.addTimeSeries(lineA, { strokeStyle:'rgb(0 , 255 , 0)', fillStyle:'rgba(0, 255, 0, 0.1)', lineWidth:3 });
-        smoothie.addTimeSeries(lineB, { strokeStyle:'rgb(0 ,0 , 255)', fillStyle:'rgba(0, 0, 255, 0.1)', lineWidth:3 });
-        smoothie.addTimeSeries(lineC, { strokeStyle:'rgb(0 ,100 , 150)', fillStyle:'rgba(0, 0, 255, 0.1)', lineWidth:3 });
-        smoothie.addTimeSeries(lineD, { strokeStyle:'rgb(0 ,0 , 0)', fillStyle:'rgba(0, 0, 255, 0.1)', lineWidth:3 });
-
-
-
-        smoothie.streamTo(document.getElementById("mycanvas"), 0 /*delay*/);
+    //----------------------Real Time Graph ----------------------------------//
+    var smoothie = new SmoothieChart({
+      grid: {
+        strokeStyle: 'rgb(125, 0, 0)',
+        fillStyle: 'rgb(60, 0, 0)',
+        lineWidth: 1,
+        millisPerLine: 2000,
+        verticalSections: 6,
+      },
+      minValue: -10,
+      maxValue: 50,
+      interpolation: "step",
+      labels: {
+        fillStyle: 'rgb(255, 255, 255)'
+      },
+      sharpLines: true,
+      labels: {
+        fontSize: 15
+      },
+      horizontalLines: {
+        color: '#ffff6f',
+        lineWidth: 1,
+        value: 0
+      },
+      timestampFormatter: SmoothieChart.timeFormatter
+    });
 
 
+    var lineA = new TimeSeries();
+    var lineB = new TimeSeries();
+    var lineC = new TimeSeries();
+    var lineD = new TimeSeries();
+
+    smoothie.addTimeSeries(lineA, {
+      strokeStyle: 'rgb(0 , 255 , 0)',
+      fillStyle: 'rgba(0, 255, 0, 0.1)',
+      lineWidth: 3
+    });
+    smoothie.addTimeSeries(lineB, {
+      strokeStyle: 'rgb(0 ,0 , 255)',
+      fillStyle: 'rgba(0, 0, 255, 0.1)',
+      lineWidth: 3
+    });
+    smoothie.addTimeSeries(lineC, {
+      strokeStyle: 'rgb(0 ,100 , 150)',
+      fillStyle: 'rgba(0, 0, 255, 0.1)',
+      lineWidth: 3
+    });
+    smoothie.addTimeSeries(lineD, {
+      strokeStyle: 'rgb(0 ,0 , 0)',
+      fillStyle: 'rgba(0, 0, 255, 0.1)',
+      lineWidth: 3
+    });
 
 
 
-        socket.on("A", function(data) {
-        lineA.append(new Date().getTime(),data);
-        $(document.getElementById('val_one')).text(data);
-        });
+    smoothie.streamTo(document.getElementById("mycanvas"), 0 /*delay*/ );
 
-        socket.on("B", function(data) {
-        lineB.append(new Date().getTime(),data);
-        $(document.getElementById('val_two')).text(data);
-        });
 
-        socket.on("C", function(data) {
-        lineC.append(new Date().getTime(),data);
-        $(document.getElementById('val_three')).text(data);
-        });
 
-        socket.on("D", function(data) {
-        lineD.append(new Date().getTime(),data);
-        $(document.getElementById('val_four')).text(data);
-        });
- //-------------Historical Graph ---------------------------------------------//
 
- $( "#button" ).click(function() {
-  //  alert( "Handler for .click() called." );
-  var string = "Historical Data"
-   socket.emit("buttonPress",string);
- });
 
-socket.on("A1", function(newString) {
+    socket.on("A", function(data) {
+      lineA.append(new Date().getTime(), data);
+      $(document.getElementById('val_one')).text(data);
+    });
 
-var g = new Dygraph(document.getElementById("graphdiv"),
-[
+    socket.on("B", function(data) {
+      lineB.append(new Date().getTime(), data);
+      $(document.getElementById('val_two')).text(data);
+    });
 
-  // Here you need to input an arrays in this format or csv.
-  //CSV are preferable.
-    [1,10,100],
-    [2,20,20],
-    [3,50,60],
-    [4,70,80]
-],
-{
-    labels: [ "Time", "Sensor-A", "Sensor-B" ]
+    socket.on("C", function(data) {
+      lineC.append(new Date().getTime(), data);
+      $(document.getElementById('val_three')).text(data);
+    });
 
-  });
+    socket.on("D", function(data) {
+      lineD.append(new Date().getTime(), data);
+      $(document.getElementById('val_four')).text(data);
+    });
+    //-------------Historical Graph ---------------------------------------------//
 
-  console.log(newString);
-  var dataArray = newString.split(',');
-  // var max = dataArray.length()
-  for(var i = 0; i < 3 ; i++){
-    console.log(dataArray[i]);
-  lineA1.append(new Date(endTime - i*500).getTime(),dataArray[i]);
+    $("#button").click(function() {
+      //  alert( "Handler for .click() called." );
+      var string = "Historical Data"
+      socket.emit("buttonPress", string);
+    });
 
-};
-});
+    socket.on("A1", function(newString) {
 
-    </script>
-  </body>
+      var obj = JSON.parse(newString);
+      console.log(obj);
+
+      function JSON2CSV(objArray) {
+
+        var array = typeof objArray != 'object' ? JSON.parse(objArray) : objArray;
+        var str = '';
+        var line = '';
+
+        // if (0) {
+        //     var head = array[0];
+        //     if (1) {
+        //         for (var index in array[0]) {
+        //             var value = index + "";
+        //             line += '"' + value.replace(/"/g, '""') + '",';
+        //         }
+        //     } else {
+        //         for (var index in array[0]) {
+        //             line += index + ',';
+        //         }
+        //     }
+        //
+        //     line = line.slice(0, -1);
+        //     str += line + '\r\n';
+        // }
+
+        for (var i = 0; i < array.length; i++) {
+          var line = '';
+
+          if (0) {
+            for (var index in array[i]) {
+              var value = array[i][index] + "";
+              line += '"' + value.replace(/"/g, '""') + '",';
+            }
+          } else {
+            for (var index in array[i]) {
+              line += array[i][index] + ',';
+            }
+          }
+
+          line = line.slice(0, -1);
+          str += '"' + line + '"' + ' ' + '+' + '\n';
+
+
+
+        }
+        string = str + '"2,2\n"'
+        return string;
+
+      }
+
+
+      console.log(JSON2CSV(obj));
+      g = new Dygraph(document.getElementById("graphdiv"), JSON2CSV(obj));
+    });
+  </script>
+</body>
+
 </html>
